# json-typedef-codegen

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  generate-all
crates/cli/: Cargo.toml
crates/cli/src/: cli.yaml  main.rs  root_name.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  codegen.rs  error.rs  inflector.rs  lib.rs  namespace.rs  target.rs
crates/core/src/codegen/: ast.rs  mod.rs  name_path.rs
crates/target_csharp_system_text/: Cargo.toml
crates/target_csharp_system_text/docker/: Program.cs  csharp.csproj
crates/target_csharp_system_text/output/basic_discriminator/: Root.cs  RootBar.cs  RootBarBaz.cs  RootQuux.cs
crates/target_csharp_system_text/output/basic_enum/: Root.cs
crates/target_csharp_system_text/output/basic_properties/: Root.cs
crates/target_csharp_system_text/output/custom_overrides/: Root.cs  RootOverrideTypeDiscriminatorBaz.cs
crates/target_csharp_system_text/output/definition_name_collisions/: Bar.cs  Bar0.cs  Foo.cs  Foo0.cs  Root.cs
crates/target_csharp_system_text/output/description/: Baz.cs  Root.cs  RootDiscriminatorWithDescription.cs  RootDiscriminatorWithDescriptionBar.cs  RootEnumWithDescription.cs  RootPropertiesWithDescription.cs
crates/target_csharp_system_text/output/discriminator_optional_properties/: Root.cs  RootBar.cs
crates/target_csharp_system_text/output/elements/: Root.cs
crates/target_csharp_system_text/output/empty_and_nonascii_definitions/: DefaultName.cs  Foo.cs  Foo0.cs  Foo0bar.cs  Foo1.cs  FooBar.cs  FooBar0.cs  FooBar1.cs  Root.cs
crates/target_csharp_system_text/output/empty_and_nonascii_enum_values/: Root.cs
crates/target_csharp_system_text/output/empty_and_nonascii_properties/: Root.cs
crates/target_csharp_system_text/output/enum_collisions/: Root.cs  RootFoo.cs  RootFooBar.cs  RootFooBar0.cs
crates/target_csharp_system_text/output/enum_variant_collisions/: Root.cs
crates/target_csharp_system_text/output/geojson/: BoundingBox.cs  GeojsonObject.cs  GeojsonObjectFeature.cs  GeojsonObjectFeatureCollection.cs  GeojsonObjectGeometryCollection.cs  GeojsonObjectLineString.cs  GeojsonObjectMultiLineString.cs  GeojsonObjectMultiPoint.cs  GeojsonObjectMultiPolygon.cs  GeojsonObjectPoint.cs  GeojsonObjectPolygon.cs  LinearRing.cs  Position.cs  Root.cs
crates/target_csharp_system_text/output/initialisms/: Root.cs  RootNestedIdInitialism.cs
crates/target_csharp_system_text/output/keywords/: For.cs  Object_.cs  Root.cs
crates/target_csharp_system_text/output/nullable_discriminator/: Root.cs  RootBar.cs  RootQuux.cs
crates/target_csharp_system_text/output/nullable_elements/: Root.cs
crates/target_csharp_system_text/output/nullable_enum/: Root.cs  Root0.cs
crates/target_csharp_system_text/output/nullable_properties/: Root.cs
crates/target_csharp_system_text/output/nullable_references/: NotnullRefNotnullString.cs  NotnullRefNullString.cs  NotnullString.cs  NullRefNotnullString.cs  NullRefNullString.cs  NullString.cs  Root.cs
crates/target_csharp_system_text/output/nullable_timestamp_property/: Root.cs
crates/target_csharp_system_text/output/optional_properties/: Root.cs
crates/target_csharp_system_text/output/property_name_collisions/: Root.cs
crates/target_csharp_system_text/output/reference/: Bar.cs  Baz.cs  Foo.cs  Root.cs
crates/target_csharp_system_text/output/root_boolean/: Root.cs
crates/target_csharp_system_text/output/root_empty/: Root.cs
crates/target_csharp_system_text/output/root_float32/: Root.cs
crates/target_csharp_system_text/output/root_float64/: Root.cs
crates/target_csharp_system_text/output/root_int16/: Root.cs
crates/target_csharp_system_text/output/root_int32/: Root.cs
crates/target_csharp_system_text/output/root_int8/: Root.cs
crates/target_csharp_system_text/output/root_nullable_string/: Root.cs
crates/target_csharp_system_text/output/root_nullable_timestamp/: Root.cs
crates/target_csharp_system_text/output/root_string/: Root.cs
crates/target_csharp_system_text/output/root_timestamp/: Root.cs
crates/target_csharp_system_text/output/root_uint16/: Root.cs
crates/target_csharp_system_text/output/root_uint32/: Root.cs
crates/target_csharp_system_text/output/root_uint8/: Root.cs
crates/target_csharp_system_text/output/type_collisions/: Root.cs  RootFoo.cs  RootFooBar.cs  RootFooBar0.cs
crates/target_csharp_system_text/output/values/: Root.cs
crates/target_csharp_system_text/src/: keywords  lib.rs
crates/target_csharp_system_text/templates/: alias  discriminator  discriminator_variant  enum  preamble  struct
crates/target_java_jackson/: Cargo.toml
crates/target_java_jackson/docker/: Dockerfile  Main.java
crates/target_java_jackson/output/basic_discriminator/: Root.java  RootBarBaz.java  RootQuux.java  UnsignedInteger.java
crates/target_java_jackson/output/basic_enum/: Root.java  UnsignedInteger.java
crates/target_java_jackson/output/basic_properties/: Root.java
crates/target_java_jackson/output/custom_overrides/: Root.java  RootOverrideTypeDiscriminatorBaz.java  RootOverrideTypeEnum.java  UnsignedShort.java
crates/target_java_jackson/output/definition_name_collisions/: Bar.java  Bar0.java  Foo.java  Foo0.java  (+1 more)
crates/target_java_jackson/src/: lib.rs
crates/target_java_jackson/templates/: UnsignedByte  UnsignedInteger  UnsignedShort  alias  discriminator  discriminator_variant  enum  preamble  struct
crates/target_typescript/: Cargo.toml
crates/target_typescript/docker/: Dockerfile  index.ts
crates/target_typescript/src/: keywords  lib.rs
crates/target_typescript/templates/: alias  discriminator  discriminator_variant  enum  struct
crates/test/: Cargo.toml
crates/test/schemas/: basic_enum.jtd.json  enum_collisions.jtd.json  property_name_collisions.jtd.json  type_collisions.jtd.json
crates/test/src/: lib.rs  pretty_diff.rs
(+744 files in other folders)
