[package]
name = "jtd-codegen"
description = "Generate code from JSON Typedef schemas"
version = "0.1.1"
license = "MIT"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
jtd = "0.1"
failure = "0.1"
serde_json = "1.0"
handlebars = "3.0"
serde = "1.0"
Inflector = "0.11"
textwrap = "0.11"
