[package]
name = "jtd-codegen"
description = "Generate code from JSON Typedef schemas"
version = "0.1.6"
license = "MIT"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[dependencies]
clap = "^2"
jtd = "^0.2"
serde_json = "^1"
serde = "^1"
Inflector = "^0.11"
textwrap = "^0.11"
anyhow = "^1"
lazy_static = "^1"
askama = "^0.10"
