[package]
name = "jtd_codegen_cli"
version = "0.1.0"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[dependencies]
jtd_codegen = { path = "../core" }
jtd_codegen_target_csharp_system_text = { path = "../target_csharp_system_text" }
serde_json = "1.0"
jtd = "0.2.1"
clap = { version = "2.33.3", features = ["yaml"] }
