[package]
name = "jtd-codegen"
version = "0.1.0"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition.workspace = true
description = "A framework for generating code from JSON Typedef schemas"
license = "MIT"

[dependencies]
thiserror = "1.0.22"
teeter_inflector = { version = "0.11.4", package = "Inflector" }
jtd.workspace = true
serde_json.workspace = true
textwrap = "0.13"
