[package]
name = "jtd_codegen_target_csharp_system_text"
version = "0.2.1"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition.workspace = true

[dependencies]
jtd-codegen.workspace = true
lazy_static.workspace = true
serde_json.workspace = true

[dev-dependencies]
jtd_codegen_test.workspace = true
