[package]
name = "jtd_codegen_target_java_jackson"
version = "0.2.1"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[dependencies]
jtd-codegen = { path = "../core" }
lazy_static = "1.4.0"
askama = "0.8"
serde_json = "1.0"

[dev-dependencies]
jtd_codegen_test = { path = "../test" }
