[package]
name = "jtd_codegen_target_java_jackson"
version = "0.2.1"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition.workspace = true

[dependencies]
jtd-codegen.workspace = true
lazy_static.workspace = true
askama = "0.8"
serde_json.workspace = true

[dev-dependencies]
jtd_codegen_test.workspace = true
