[package]
name = "jtd_codegen_target_typescript"
version = "0.2.1"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition.workspace = true

[dependencies]
jtd-codegen.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
regex = "1"

[dev-dependencies]
jtd_codegen_test.workspace = true
