[package]
name = "jtd_codegen_test"
version = "0.1.0"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition.workspace = true

[dependencies]
jtd-codegen.workspace = true
jtd.workspace = true
serde_json.workspace = true
tempfile = "3"
jtd-fuzz = "0.1.21"
rand = "0.7"
rand_pcg = "0.2"
difference = "2.0"
